# midi-visualizer

./: .gitignore  Cargo.toml  README.md  config.toml
src/: audio.rs  main.rs  midi.rs  myconfig.rs
